--- a/src/styles/vars.css
+++ b/src/styles/vars.css
@@ -12,7 +12,7 @@
   --border-color: var(--gray5);
   --brand-color: #e5001f;
   --content-background: white;
-  --header-background: var(--gray6);
+  --header-background: rgb(242, 242, 247, .9);  /* Gray6 light. */
   --header-border: 1px solid var(--border-color);
   --image-background: var(--gray4);
   --link-color: var(--text-color);
@@ -22,15 +22,16 @@
   --text-color-inverted: white;
 
   /* Layout. */
-  --app-grid: 'header header header' var(--header-size) '. main .' 1fr / 1fr minmax(auto, var(--section-max-size)) 1fr;
+  --app-grid: var(--header-size) 1fr / 1fr minmax(auto, var(--section-max-size)) 1fr;
   --back-label-display: none;
   --gap: clamp(.75em, .75em + 1vw, 3em);
   --footer-padding: 2rem;
   --header-gap: .5rem;
   --header-grid: '. back wordmark . .' var(--header-size) / 0 minmax(0, 1fr) auto 1fr 0;
-  --header-position: sticky;
+  --header-position: fixed;
   --header-size: clamp(3rem, 3rem + 1vw, 5rem);
-  --main-block-size: calc(100dvh - var(--header-size));
+  --main-block-size: 100dvh;
+  --main-grid-area: 1 / 2 / 3 / 2;
   --preview-border: 1px solid var(--border-color);
   --previews-border: 1px solid var(--border-color);
   --previews-border-radius: 1rem;
@@ -40,6 +41,7 @@
   --thumb-size: 4.5rem;
   --view-background: var(--body-background);
   --view-display: block;
+  --view-padding-block: var(--header-size) 0;
 
   /* Typography. */
   --small-font-size: 60%;
@@ -62,7 +64,7 @@
     --border-color: var(--gray3);
     --brand-color: #ed4d62;
     --content-background: var(--gray6);
-    --header-background: black;
+    --header-background: rgba(0, 0, 0, .9);
     --link-visited-color: rgb(174, 174, 178);  /* Gray2 light. */
     --text-color: rgb(229, 229, 234);  /* Gray5 light. */
     --text-color-inverted: black;
@@ -122,9 +124,11 @@ gc-home {
     --main-aspect-ratio: 2 / 1;
     --main-border-radius: .25rem;
     --main-block-size: 100%;
+    --main-grid-area: 2 / 2;
     --section-max-size: 70rem;
     --view-display: grid;
     --view-grid: 'cover content' / 1fr 1fr;
+    --view-padding-block: 0;
   }
 
   gc-app {
